[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "An full featured XBI channel."
edition     = "2021"
license     = "Apache-2.0"
name        = "pallet-xbi-portal"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.4"

[dependencies]
codec                 = { package = "parity-scale-codec", version = "3", default-features = false }
impl-trait-for-tuples = "0.2.2"
log                   = { version = "0.4", default-features = false }
scale-info            = { version = "2.1.1", default-features = false, features = [ "derive" ] }
serde                 = { default-features = false, version = "1.0", optional = true }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, optional = true, version = "4.0.0-dev" }
frame-support      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "4.0.0-dev" }
frame-system       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "4.0.0-dev" }

sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "5.0.0" }
sp-core       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "6.0.0" }
sp-inherents  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "4.0.0-dev" }
sp-io         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "6.0.0" }
sp-runtime    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "6.0.0" }
sp-std        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "4.0.0" }

substrate-abi           = { path = "../../crates/sabi", default-features = false, version = "0.3" }
substrate-contracts-abi = { path = "../../crates/scabi", default-features = false, version = "0.3" }
xp-channel              = { path = "../../crates/channel-primitives", default-features = false, features = [ "frame" ], version = "0.3" }
xp-format               = { path = "../../crates/format", default-features = false, version = "0.3" }
xp-xcm                  = { path = "../../crates/xcm-primitives", default-features = false, features = [ "frame" ], version = "0.3" }
xs-channel              = { path = "../../crates/channel", default-features = false, features = [ "frame" ], version = "0.3" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", version = "0", default-features = false }

contracts-primitives = { git = "https://github.com/t3rn/t3rn", branch = "development", default-features = false, package = "pallet-contracts-primitives", version = "5" }
evm-primitives       = { git = "https://github.com/t3rn/t3rn", branch = "development", default-features = false, package = "fp-evm", version = "3.0.0-dev" }
t3rn-primitives      = { git = "https://github.com/t3rn/t3rn", branch = "development", default-features = false, version = "1.0.0-alpha.1" }

[dev-dependencies]
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.27", version = "6.0.0-dev" }

[features]
default = [ "std" ]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm/runtime-benchmarks",
]
std = [
  "codec/std",
  "scale-info/std",
  "xcm/std",
  "serde/std",
  "sp-std/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "contracts-primitives/std",
  "evm-primitives/std",
  "log/std",
  "xp-channel/std",
  "xp-channel/frame-std",
  "xp-xcm/frame-std",
  "xp-xcm/std",
  "xp-format/std",
  "xs-channel/std",
  "xs-channel/frame-std",
  "substrate-abi/std",
  "substrate-contracts-abi/std",
  "t3rn-primitives/std",
]
