[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "An full featured XBI channel."
edition     = "2021"
license     = "Apache-2.0"
name        = "pallet-xbi-portal"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.7"

[dependencies]
codec                 = { package = "parity-scale-codec", default-features = false }
impl-trait-for-tuples = "0.2.2"
log                   = { version = "0.4", default-features = false }
scale-info            = { version = "2.1.1", default-features = false, features = [ "derive" ] }
serde                 = { default-features = false, optional = true }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false, optional = true}
frame-support      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-system       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }

sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-core       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-inherents  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-io         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-std        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }

substrate-abi           = { path = "../../crates/sabi", default-features = false }
substrate-contracts-abi = { path = "../../crates/scabi", default-features = false }
xp-channel              = { path = "../../crates/channel-primitives", default-features = false, features = [ "frame" ] }
xp-format               = { path = "../../crates/format", default-features = false }
xp-xcm                  = { path = "../../crates/xcm-primitives", default-features = false, features = [ "frame" ] }
xs-channel              = { path = "../../crates/channel", default-features = false, features = [ "frame" ] }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }

contracts-primitives = { git = "https://github.com/t3rn/t3rn", branch = "build/update-v1", default-features = false, package = "pallet-contracts-primitives" }
evm-primitives       = { git = "https://github.com/t3rn/t3rn", branch = "build/update-v1", default-features = false, package = "fp-evm" }
t3rn-primitives      = { git = "https://github.com/t3rn/t3rn", branch = "build/update-v1", default-features = false }

[dev-dependencies]
pallet-assets   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-evm      = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.0.0" }

[features]
default = [ "std" ]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "scale-info/std",
  "xcm/std",
  "serde/std",
  "sp-std/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "contracts-primitives/std",
  "evm-primitives/std",
  "log/std",
  "xp-channel/std",
  "xp-channel/frame-std",
  "xp-xcm/frame-std",
  "xp-xcm/std",
  "xp-format/std",
  "xs-channel/std",
  "xs-channel/frame-std",
  "substrate-abi/std",
  "substrate-contracts-abi/std",
  "t3rn-primitives/std",
]
