[package]
authors     = [ "t3rn team@t3rn.io" ]
description = "Enter XBI Portal from EVM Precompile"
edition     = "2021"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "pallet-xbi-evm-enter-precompile"
repository  = "https://github.com/t3rn/t3rn/"
version     = "1.0.0-dev"

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }
frame-system  = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }

fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.39", default-features = false }

pallet-balances   = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }
pallet-evm        = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.39", default-features = false }
pallet-xbi-portal = { path = "../../..", default-features = false }
pallet-xcm        = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.39", default-features = false }

sabi      = { path = "../../../crates/sabi", default-features = false, package = "substrate-abi" }
scabi     = { path = "../../../crates/scabi", default-features = false, package = "substrate-contracts-abi" }
xp-format = { path = "../../../crates/format", default-features = false }

[features]
default = [ "std" ]
std = [
  "frame-system/std",
  "frame-support/std",
  "fp-evm/std",
  "pallet-balances/std",
  "sabi/std",
  "scabi/std",
  "xp-format/std",
  "pallet-balances/std",
  "pallet-evm/std",
  "pallet-xcm/std",
  "pallet-xbi-portal/std",
]
